<resources>
    <string name="app_name">Smart Cleaner</string>
    <string name="admob_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_inter" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_size" translatable="false">FULL_BANNER</string>
    <string name="usedmemory">Used RAM</string>
    <string name="usedram">Used RAM</string>
    <string name="boost">"Accelerate "</string>
    <string name="clean">Cleaning</string>
    <string name="scanCpu">RAM\nScan......</string>
    <string name="scanMemory">Scanning\ndevice memory......</string>
    <string name="found">Discovered:</string>
    <string name="running_apps">Running applications:</string>
    <string name="visible_cache">Visible cache</string>
    <string name="cleanIt">Clean</string>
    <string name="files">Data files</string>
    <string name="apps">Application data</string>
    <string name="trash">Advertising garbage</string>
    <string name="cleanBottom">Releasing\napplication data...</string>
    <string name="CleanDone">Liberation\naccomplished!</string>
    <string name="boostRam">RAM\nScan...</string>
    <string name="boost_found">Found:</string>
    <string name="boosting">Acceleration</string>
    <string name="running_apps_wsign">Running applications</string>
    <string name="boostBottom">Freeing\nup RAM......</string>
    <string name="gettingData">Obtaining data...</string>
    <string name="cool">Cooling</string>
    <string name="menu_cool">Cooling</string>
    <string name="overheated">OVERHEAT</string>
    <string name="battery_save">Saving\nCharge</string>
    <string name="files_manager">File\nmanager</string>
    <string name="apps_manager">Application\nManager</string>
    <string name="batteryOptimize">Energy Conservation\nOptimization...</string>
    <string name="appsCount">applications</string>
    <string name="normalMode">Normal mode</string>
    <string name="middleMode">Average charge economy</string>
    <string name="maxMode">Maximum charge economy</string>
    <string name="countApps">Putting applications to sleep</string>
    <string name="give_permission_top">Issue a permit</string>
    <string name="findApp">Find the application</string>
    <string name="give_permission">\"In order to optimize effectively.  you need to provide access to  application usage statistics.\"</string>
    <string name="allow">Allow</string>
    <string name="filesManager">File manager</string>
    <string name="music">Музыка</string>
    <string name="musicText">Очистите песни, которые вам не нравятся, чтобы сэкономить  пространство на вашем устройстве</string>
    <string name="video">Видео</string>
    <string name="videoText">Очистите видео, которые вам не нравятся, чтобы сэкономить  пространство на вашем устройстве</string>
    <string name="image">Изображения</string>
    <string name="imageText">Очистите изображения, которые вам не нравятся, чтобы сэкономить  пространство на вашем устройстве</string>
    <string name="appManager">Application Manager</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="scan">Scan</string>
    <string name="start">Start</string>
    <string name="accept">Accept the</string>
    <string name="policy">Privacy Policy</string>
    <string name="policy_bottom">To continue, accept the conditions</string>
    <string name="scanning_system">System scan</string>
    <string name="give_storage_permission">Для эффективного нахождения и удаления ненужных файлов, нужно предоставить доступ к управлению всеми файлами телефона.</string>
    <string name="recommend">We also recommend:</string>
    <string name="optimize">Optimize</string>
    <string-array name="generic_filter_files">
        <item>.tmp</item>
        <item>.log</item>
    </string-array>
    <string-array name="generic_filter_folders">
        <item>Logs</item>
        <item>logs</item>
        <item>temp</item>
        <item>Temporary</item>
        <item>temporary</item>
    </string-array>
    <string-array name="aggressive_filter_folders">
        <item>supersonicads</item>
        <item>Cache</item>
        <item>Analytics</item>
        <item>thumbnails?</item>
        <item>mobvista</item>
        <item>UnityAdsVideoCache</item>
        <item>albumthumbs?</item>
        <item>LOST.DIR</item>
        <item>.Trash</item>
        <item>desktop.ini</item>
        <item>leakcanary</item>
        <item>.DS_Store</item>
        <item>.spotlight-V100</item>
        <item>fseventsd</item>
        <item>Bugreport</item>
        <item>bugreports</item>
        <item>.Trash</item>
        <item>cache</item>
        <item>splashad</item>
    </string-array>
    <string-array name="aggressive_filter_files">
        <item>.exo</item>
        <item>thumbs?.db</item>
        <item>.thumb[0-9]</item>
        <item>splashad</item>
    </string-array>
    <string-array name="themes">
        <item>Auto</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>