<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
  app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_gravity="center_vertical|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/permission_text_card"
            android:id="@+id/mcvPermission"
           app:contentPadding="10dp"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.15"
                    app:layout_constraintDimensionRatio="1:1"
                    android:src="@mipmap/ic_launcher_round"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    android:id="@+id/ivAppIcon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/findApp"
                    android:textColor="@color/permission_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivAppIcon"
                    android:textSize="12sp"
                    android:id="@+id/tvFindApp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/permission_text_app"
                    app:layout_constraintStart_toStartOf="@+id/tvFindApp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivAppIcon"
                    app:layout_constraintVertical_bias="0.7"
                    android:textSize="14sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_give_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mcvPermission"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/give_permission_top"
            android:textColor="#2D2D2D"
            android:layout_centerHorizontal="true"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
android:layout_below="@+id/tv_give_permission"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_give_permission_text"
            android:text="@string/give_permission"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_give_permission_text"
            android:layout_centerHorizontal="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/allow"
            android:textAllCaps="false"
            app:backgroundTint="@color/button_background"
            app:cornerRadius="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/mbAllow"
            />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>