<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.BatterySaverFragment.BatterySaverFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clBatterySaverScan"
        >
        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:indicatorDirectionCircular="clockwise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/cpiBatterySaverProgress"
            app:indicatorColor="@color/white"
            app:cpb_background_progressbar_color="@color/track_color"
            app:cpb_progressbar_color="@color/white"
            android:indeterminate="true"
            app:cpb_progressbar_width="10dp"
            app:cpb_indeterminate_mode="true"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/batteryOptimize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cpiBatterySaverProgress"
            app:layout_constraintBottom_toBottomOf="@+id/cpiBatterySaverProgress"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_boost"
            android:visibility="gone"
            android:id="@+id/ivBatterySaverFinished"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batteryOptimize"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:textAlignment="center"
            android:id="@+id/tvBatterySaverBottom"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="@string/admob_size"
        ads:adUnitId="@string/admob_banner"/>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/adView"
    android:id="@+id/clBatterySaver"
    android:visibility="gone"
    >
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintDimensionRatio="1:1"
        app:lottie_rawRes="@raw/battery_main"
        android:scaleX="3"
        android:scaleY="3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:text="@string/appsCount"
    android:textColor="@color/white"
    android:textSize="20sp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintHeight_percent="0.1"
        android:weightSum="3"
        android:id="@+id/llNormalMode"
        >
<ImageView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:src="@drawable/ic_lightning"
android:layout_weight="0.5"
    android:contentDescription="@string/normalMode"
    android:elevation="10dp"
    android:id="@+id/ivLightning"
    />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/normalMode"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_weight="2.2"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:id="@+id/mrbNormalMode"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llNormalMode"
        app:layout_constraintHeight_percent="0.1"
        android:weightSum="3"
        android:id="@+id/llMiddleMode"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_lightning_middle"
            android:layout_weight="0.5"
            android:contentDescription="@string/middleMode"
            android:elevation="10dp"
            android:id="@+id/ivLightningMiddle"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/middleMode"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_weight="2.2"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:id="@+id/mrbMiddleMode"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llMiddleMode"
        app:layout_constraintHeight_percent="0.1"
        android:weightSum="3"
        android:id="@+id/llMaxMode"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_lightning_max"
            android:layout_weight="0.5"
            android:contentDescription="@string/middleMode"
            android:elevation="10dp"
            android:id="@+id/ivLightningMax"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/maxMode"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_weight="2.2"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:id="@+id/mrbMaxMode"
            />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.08"
        app:backgroundTint="@color/button_delete"
        app:cornerRadius="20dp"
        android:text="@string/boost"
        android:textAllCaps="false"
        android:id="@+id/mbtnSaveBattery"
        android:clickable="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>