<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.BoostFragment.BoostFragment"
    android:id="@+id/main"
    >
    <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
        android:layout_width="0dp"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="@string/admob_size"
        ads:adUnitId="@string/admob_banner"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        android:id="@+id/clRamScan"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.52"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintDimensionRatio="1:1"
            app:lottie_rawRes="@raw/boost"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:scaleX="2"
            android:scaleY="2"
            android:visibility="gone"
            android:id="@+id/lavBoost"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/v_progress"
            />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:indicatorDirectionCircular="clockwise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/cpiBoostProgress"
            app:indicatorColor="@color/white"
            app:cpb_background_progressbar_color="@color/track_color"
            app:cpb_progressbar_color="@color/white"
            android:indeterminate="true"
            app:cpb_progressbar_width="10dp"
            app:cpb_indeterminate_mode="true"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cpiBoostProgress"
            app:layout_constraintBottom_toBottomOf="@+id/cpiBoostProgress"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_boost"
            android:visibility="gone"
            android:id="@+id/ivBoostFinished"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvBoostBottom"
            app:layout_constraintBottom_toBottomOf="@id/tvBoostBottom"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/ivAppIcon"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/boostRam"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:textAlignment="center"
            app:layout_constraintWidth_percent="0.5"
            android:id="@+id/tvBoostBottom"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.9"
            android:textAlignment="center"
            app:layout_constraintWidth_percent="0.5"
            android:id="@+id/tvAppSize"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:id="@+id/clBoost"
    >
<com.airbnb.lottie.LottieAnimationView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.2"
    app:layout_constraintHeight_percent="0.3"
    app:layout_constraintDimensionRatio="1:1"
    app:lottie_rawRes="@raw/boostmain"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    android:scaleX="3"
    android:scaleY="3"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boost_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/tvFound"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFound"
        app:layout_constraintBottom_toTopOf="@+id/tvFoundApps"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:id="@+id/tvFoundMB"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/running_apps_wsign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:id="@+id/tvFoundApps"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.08"
        app:backgroundTint="@color/button_delete"
        app:cornerRadius="20dp"
        android:text="@string/boost"
        android:textAllCaps="false"
        android:id="@+id/mbtnBoost"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>