<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CoolFragment.CoolFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clCoolScan"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/v_progress"
            />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:indicatorDirectionCircular="clockwise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/cpiCoolProgress"
            app:indicatorColor="@color/white"
            app:cpb_background_progressbar_color="@color/track_color"
            app:cpb_progressbar_color="@color/white"
            android:indeterminate="true"
            app:cpb_progressbar_width="10dp"
            app:cpb_indeterminate_mode="true"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cpiCoolProgress"
            app:layout_constraintBottom_toBottomOf="@+id/cpiCoolProgress"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_boost"
            android:visibility="gone"
            android:id="@+id/ivBoostFinished"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gettingData"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:textAlignment="center"
            android:id="@+id/tvCoolBottom"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/clCool"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/ivCpiCenterIcon"
            app:lottie_rawRes="@raw/rokcet"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overheated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.55"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/tvFound"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFound"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:id="@+id/tvFoundTemperature"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintHeight_percent="0.08"
            app:backgroundTint="@color/button_delete"
            app:cornerRadius="20dp"
            android:text="@string/cool"
            android:textAllCaps="false"
            android:id="@+id/mbtnCool"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>